# 15-Puzzle

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  LICENSE  README.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
cmake/: FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_ttf.cmake  IncludeAll.cmake
custom_ports/: README.md
custom_triplets/: README.md  clang-toolchain.cmake  x64-linux-clang.cmake  x64-linux-dynamic-clang.cmake  x64-windows-llvm.cmake
custom_triplets/x64-windows-llvm/: x64-windows-llvm.toolchain.cmake
src/: main.cpp  main.h  puzzleGame.hpp
src/ECS/: ECS.cpp  ECS.h
src/ECS/components/: animation.h  camera.h  spriteRenderer.cpp  spriteRenderer.h
src/core/: common.h  engine.cpp  engine.h  errBytesGen.h  game.cpp  game.h  game.inl  globals.h  hardcoded_data.h  input.cpp  input.h  inputManager.cpp  inputManager.h  logger.cpp  logger.hpp  textureManager.h  timing.cpp  timing.h  transform.cpp  transform.h  window.cpp  window.h
src/core/event/: iobserver.h
src/core/math/: mathf.h  rect.hpp  vectormath.cpp  vectormath.hpp
src/gameComponents/: collisionTest.hpp  player.h
src/level/: map.cpp  map.h
src/physics/: collision.hpp  physics.h
src/physics/components/: collider.h
src/puzzle/: countMap.h  ida_ai.cpp  ida_ai.h  patternGen.hpp  puzzleState.cpp  puzzleState.hpp  solver.cpp  solver.hpp
src/rendering/: c_drawable.h  drawSorter.cpp  drawSorter.h  dynamicSprite.cpp  dynamicSprite.h  render_drawlayer.h  sprite.cpp  sprite.h
src/rendering/shapes/: rectShape.h  textShape.h
